add salon delete api
