# api/docs/swagger.json
@@ -527,6 +527,37 @@
                 }
             }
         },
+        "/api/v1/salon/beautician/{randID}": {
+            "delete": {
+                "description": "美容師が仕事可能な美容院を一つ削除します",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "美容師美容院削除",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestmodel.BeauticianSalonDelete"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Something went wrong",
+                        "schema": {
+                            "$ref": "#/definitions/resource.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/salon/belongs": {
             "get": {
                 "consumes": [
@@ -737,6 +768,14 @@
             "required": [
                 "salonRandId"
             ],
+            "properties": {
+                "salonRandId": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestmodel.BeauticianSalonDelete": {
+            "type": "object",
             "properties": {
                 "salonRandId": {
                     "type": "string"
@@ -997,6 +1036,9 @@
                 },
                 "price": {
                     "type": "integer"
+                },
+                "randId": {
+                    "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
